Refactor OpenAPI Schemas
