# docs/openapi.yaml
@@ -16,18 +16,24 @@ components:
         createdAt:
           description: Timestamp when the book was created
           format: date-time
+          readOnly: true
           type: string
         description:
           description: Book description
+          maxLength: 500
           type: string
         id:
           description: Book ID
+          readOnly: true
           type: string
         metadata:
           $ref: "#/components/schemas/BookMetadata"
           description: Metadata of the book
         name:
           description: Book name
+          examples:
+            - New Book
+          maxLength: 100
           type: string
       required:
         - id
@@ -51,7 +57,6 @@ components:
       required:
         - author
         - isbn
-        - genre
       type: object
     BookPage:
       additionalProperties: false
@@ -68,12 +73,15 @@ components:
           type: string
         bookId:
           description: Parent Book ID
+          pattern: ^[a-fA-F0-9]{24}$
+          patternDescription: BSON ObjectID
           type: string
         content:
           description: Text content of the page
           type: string
         id:
           description: Book Page ID
+          readOnly: true
           type: string
         metadata:
           $ref: "#/components/schemas/BookPageMetadata"
@@ -100,40 +108,6 @@ components:
           type: boolean
       required:
         - isBookmarked
-        - highlight
-      type: object
-    CreateBookPageRequestBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/CreateBookPageRequestBody.json
-          format: uri
-          readOnly: true
-          type: string
-        attachedImageFileId:
-          description: File ID of the attached image
-          type: string
-        bookID:
-          description: Parent Book ID
-          pattern: ^[a-fA-F0-9]{24}$
-          type: string
-        content:
-          description: Text content of the page
-          type: string
-        metadata:
-          $ref: "#/components/schemas/BookPageMetadata"
-          description: Metadata of the book page
-        pageNumber:
-          description: Page number within the book
-          format: int64
-          type: integer
-      required:
-        - bookID
-        - pageNumber
-        - content
-        - metadata
       type: object
     CreateBookPageResponseBody:
       additionalProperties: false
@@ -146,39 +120,10 @@ components:
           readOnly: true
           type: string
         id:
+          description: Created Book Page ID
           type: string
       required:
         - id
-      type: object
-    CreateBookRequestBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/CreateBookRequestBody.json
-          format: uri
-          readOnly: true
-          type: string
-        coverImageFileId:
-          description: File ID of the book cover image
-          type: string
-        description:
-          description: Book description
-          maxLength: 500
-          type: string
-        metadata:
-          $ref: "#/components/schemas/BookMetadata"
-          description: Metadata of the book
-        name:
-          description: Book name
-          examples:
-            - New Book
-          maxLength: 100
-          type: string
-      required:
-        - name
-        - metadata
       type: object
     CreateBookResponseBody:
       additionalProperties: false
@@ -195,40 +140,6 @@ components:
           type: string
       required:
         - id
-      type: object
-    CreateReviewRequestBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/CreateReviewRequestBody.json
-          format: uri
-          readOnly: true
-          type: string
-        author:
-          description: Name of the review author
-          examples:
-            - User
-          maxLength: 10
-          type: string
-        message:
-          description: Review message
-          examples:
-            - Lorem Ipsum
-          maxLength: 100
-          type: string
-        rating:
-          description: Rating from 1 to 5
-          examples:
-            - 2
-          format: int64
-          maximum: 5
-          minimum: 1
-          type: integer
-      required:
-        - author
-        - rating
       type: object
     ErrorDetail:
       additionalProperties: false
@@ -303,7 +214,7 @@ components:
           description: Temporary download URL
           type: string
         expiresAt:
-          description: Timestamp when the download URL expires
+          description: Timestamp when download URL expires
           format: date-time
           type: string
         fileName:
@@ -325,6 +236,7 @@ components:
           readOnly: true
           type: string
         data:
+          description: List of available pets
           items:
             $ref: "#/components/schemas/Pet"
           type:
@@ -364,6 +276,7 @@ components:
           readOnly: true
           type: string
         data:
+          description: List of books
           items:
             $ref: "#/components/schemas/Book"
           type:
@@ -425,7 +338,7 @@ components:
           format: int64
           type: integer
         files:
-          description: List of file keys found in the S3 bucket
+          description: List of file keys found in file storage
           items:
             type: string
           type:
@@ -481,7 +394,11 @@ components:
             - array
             - "null"
         status:
-          description: Pet status (available, pending, sold)
+          description: Pet status
+          enum:
+            - available
+            - pending
+            - sold
           type: string
         tags:
           description: Pet tags
@@ -515,22 +432,39 @@ components:
     Review:
       additionalProperties: false
       properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/Review.json
+          format: uri
+          readOnly: true
+          type: string
         author:
           description: Name of the review author
+          examples:
+            - User
+          maxLength: 10
           type: string
         createdAt:
           description: Timestamp when the review was created
           format: date-time
+          readOnly: true
           type: string
         id:
           description: Review ID
+          readOnly: true
           type: string
         message:
           description: Review message
+          examples:
+            - Lorem Ipsum
+          maxLength: 100
           type: string
         rating:
           description: Rating from 1 to 5
           format: int64
+          maximum: 5
+          minimum: 1
           type: integer
       required:
         - id
@@ -649,6 +583,7 @@ paths:
           schema:
             description: Parent Book ID
             pattern: ^[a-fA-F0-9]{24}$
+            patternDescription: BSON ObjectID
             type: string
         - description: If true, returns all items ignoring pagination
           explode: false
@@ -703,7 +638,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateBookPageRequestBody"
+              $ref: "#/components/schemas/BookPage"
         required: true
       responses:
         "201":
@@ -734,6 +669,7 @@ paths:
           schema:
             description: Parent Book ID
             pattern: ^[a-fA-F0-9]{24}$
+            patternDescription: BSON ObjectID
             type: string
         - description: Center page used as the reference point
           explode: false
@@ -783,6 +719,7 @@ paths:
           schema:
             description: Parent Book ID
             pattern: ^[a-fA-F0-9]{24}$
+            patternDescription: BSON ObjectID
             type: string
         - description: Start page number (inclusive)
           explode: false
@@ -830,6 +767,7 @@ paths:
           schema:
             description: Book Page ID
             pattern: ^[a-fA-F0-9]{24}$
+            patternDescription: BSON ObjectID
             type: string
       responses:
         "200":
@@ -905,7 +843,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateBookRequestBody"
+              $ref: "#/components/schemas/Book"
         required: true
       responses:
         "201":
@@ -935,6 +873,7 @@ paths:
           schema:
             description: Book ID
             pattern: ^[a-fA-F0-9]{24}$
+            patternDescription: BSON ObjectID
             type: string
       responses:
         "200":
@@ -954,16 +893,18 @@ paths:
         - Books
   /v1/files/download/{id}:
     get:
-      description: Get a file from object storage.
+      description: Get a file from file storage.
       operationId: get-file-download-link-v1
       parameters:
         - description: File ID
           explode: false
           in: query
           name: id
+          required: true
           schema:
             description: File ID
             pattern: ^[a-fA-F0-9]{24}$
+            patternDescription: BSON ObjectID
             type: string
       responses:
         "200":
@@ -978,12 +919,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
-      summary: Get file from object storage (V1)
+      summary: Get file from file storage (V1)
       tags:
         - Files
   /v1/files/upload:
     post:
-      description: Upload a file to object storage.
+      description: Upload a file to file storage.
       operationId: upload-file-v1
       requestBody:
         content:
@@ -1002,7 +943,7 @@ paths:
                   format: binary
                   type: string
                 objectBaseKey:
-                  description: Base object key in object storage
+                  description: Base object key in file storage
                   type: string
               required:
                 - file
@@ -1020,7 +961,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
-      summary: Upload file to object storage (V1)
+      summary: Upload file to file storage (V1)
       tags:
         - Files
   /v1/pets:
@@ -1099,7 +1040,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateReviewRequestBody"
+              $ref: "#/components/schemas/Review"
         required: true
       responses:
         "201":
