# internal/controller/restapi/schema/review.go
@@ -5,19 +5,15 @@ import (
 )
 
 type Review struct {
-	ID        string    `json:"id" doc:"Review ID"`
-	Author    string    `json:"author" doc:"Name of the review author"`
-	Rating    int       `json:"rating" doc:"Rating from 1 to 5"`
-	Message   string    `json:"message,omitempty" doc:"Review message"`
-	CreatedAt time.Time `json:"createdAt" doc:"Timestamp when the review was created"`
+	ID        string    `json:"id" doc:"Review ID" readOnly:"true"`
+	Author    string    `json:"author" maxLength:"10" doc:"Name of the review author" example:"User"`
+	Rating    int       `json:"rating" minimum:"1" maximum:"5" doc:"Rating from 1 to 5"`
+	Message   string    `json:"message,omitempty" maxLength:"100" doc:"Review message" example:"Lorem Ipsum"`
+	CreatedAt time.Time `json:"createdAt" doc:"Timestamp when the review was created" readOnly:"true"`
 }
 
 type CreateReviewRequest struct {
-	Body struct {
-		Author  string `json:"author" maxLength:"10" doc:"Name of the review author" example:"User"`
-		Rating  int    `json:"rating" minimum:"1" maximum:"5" doc:"Rating from 1 to 5" example:"2"`
-		Message string `json:"message,omitempty" maxLength:"100" doc:"Review message" example:"Lorem Ipsum"`
-	}
+	Body Review
 }
 
 type CreateReviewResponse struct{}
